dynamix/force-app/main/default/objects/communicat_o__List_Message__c/communicat_o__List_Message__c.object-meta.xml
<CustomObject>
    <label>List Message</label>
    <nameField>
        <displayFormat>LM-{00000}</displayFormat>
        <label>List Messages Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>