dynamix/force-app/main/default/objects/communicat_o__List_Message__c/fields/communicat_o__Activity_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Activity_Date_Time__c</fullName>
    <label>Activity Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>