dynamix/force-app/main/default/objects/communicat_o__List_Message__c/fields/communicat_o__Message__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>