dynamix/force-app/main/default/objects/communicat_o__List_Message__c/fields/communicat_o__Template_Id__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Template_Id__c</fullName>
    <label>Template Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>