dynamix/force-app/main/default/objects/communicat_o__List_Message__c/listViews/S_M_Head_List_Message.listView-meta.xml
<ListView>
    <fullName>S_M_Head_List_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>S&amp;M Head</label>
    <queue>S_M_Head</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>